code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__multiline_formatting.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: output
---
 +----------------------------------------------------------------------------+
 |                                    Code                                    |
 +----------------------------------------------------------------------------+

   - Writing code
   - Reading files
   - Running commands



 • Here's a simple function:

   + rust ----------------------------+
   |  fn hello() {                    |
   |      println!("Hello, world!");  |
   |  }                               |
   +----------------------------------+


 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
 Read Only  (Shift+Tab change)                        Ctrl+G guide  •  API key
