code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__scroll_spacing_scrolled_intact.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
assertion_line: 1110
expression: scrolled
---
 +----------------------------------------------------------------------------+
 |                                    Code                                    |
 +----------------------------------------------------------------------------+
 •
   Here is another paragraph to expand height.

   Yet another paragraph for good measure.

 › Third user prompt to push history further.

   Assistant reply number three, still going strong.
 •
   - Bullet one
   - Bullet two
   - Bullet three

 › Fourth user prompt to guarantee overflow beyond the viewport height.


 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
   Read Only  (Shift+Tab change)                       Ctrl+H help  •  API key
