code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__settings_help_overlay_closed.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: closed
---
 +------------------------------------------------------------------------------------------------+
 |                                           Every Code                                           |
 +------------------------------------------------------------------------------------------------+
 +Settings ▸ Overview-----------------------------------------------------------------------------+
 |                                                                                                |
 | › Model              Model: GPT-5.5 (Medium)                                                   |
 |   + Choose the language model used for new completions.                                        |
 |                                                                                                |
 |   Theme              Theme: Light - Photon (16-color) · Spinner: Diamond                       |
 |   + Switch between preset color palettes and adjust contrast.                                  |
 |                                                                                                |
 |   Updates            Auto update: Disabled                                                     |
 |   + Control CLI auto-update cadence and release channels.                                      |
 |                                                                                                |
 |                                                                                                |

 |   Accounts           Auto-switch: On · API key fallback: Off                                   |
 |   + Configure account switching behavior under rate and usage limits.                          |
 |                                                                                                |
 | ↑ ↓ Move    Enter Open    Esc Close    ? Help                                                  |
 |                                                                                                |
 +------------------------------------------------------------------------------------------------+

 +------------------------------------------------------------------------------------------------+
 | What can I code for you today?                                                                 |
 +------------------------------------------------------------------------------------------------+
 Read Only  (Shift+Tab change)                                           Ctrl+G editor  •  API key
